// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Select Field renders 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="Radio Test"
    required={false}
  />
  <Select
    arrowRenderer={[Function]}
    autoBlur={true}
    autosize={true}
    backspaceRemoves={true}
    backspaceToRemoveMessage="Press backspace to remove {label}"
    clearAllText="Clear all"
    clearRenderer={[Function]}
    clearValueText="Clear value"
    clearable={true}
    closeOnSelect={true}
    deleteRemoves={true}
    delimiter=","
    disabled={false}
    escapeClearsValue={true}
    filterOptions={[Function]}
    ignoreAccents={true}
    ignoreCase={true}
    inputProps={Object {}}
    isLoading={false}
    joinValues={true}
    labelKey="label"
    matchPos="any"
    matchProp="any"
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    name="fieldName"
    noResultsText="No results found"
    onBlur={[Function]}
    onBlurResetsInput={true}
    onChange={[Function]}
    onCloseResetsInput={true}
    onFocus={[Function]}
    onSelectResetsInput={true}
    openOnClick={true}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "One",
        },
        Object {
          "label": "Option 2",
          "value": "Two",
        },
        Object {
          "label": "Option 3",
          "value": "Three",
        },
      ]
    }
    pageSize={5}
    placeholder="Select..."
    removeSelected={true}
    required={false}
    rtl={false}
    scrollMenuIntoView={true}
    searchable={true}
    simpleValue={false}
    tabSelectsValue={true}
    trimFilter={true}
    valueComponent={[Function]}
    valueKey="value"
  />
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "3ex",
      }
    }
  />
</FormGroup>
`;

exports[`The Select Field renders allowing multiple selections 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="Radio Test"
    required={false}
  />
  <Select
    arrowRenderer={[Function]}
    autoBlur={true}
    autosize={true}
    backspaceRemoves={true}
    backspaceToRemoveMessage="Press backspace to remove {label}"
    clearAllText="Clear all"
    clearRenderer={[Function]}
    clearValueText="Clear value"
    clearable={true}
    closeOnSelect={true}
    deleteRemoves={true}
    delimiter=","
    disabled={false}
    escapeClearsValue={true}
    filterOptions={[Function]}
    ignoreAccents={true}
    ignoreCase={true}
    inputProps={Object {}}
    isLoading={false}
    joinValues={true}
    labelKey="label"
    matchPos="any"
    matchProp="any"
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={true}
    name="fieldName"
    noResultsText="No results found"
    onBlur={[Function]}
    onBlurResetsInput={true}
    onChange={[Function]}
    onCloseResetsInput={true}
    onFocus={[Function]}
    onSelectResetsInput={true}
    openOnClick={true}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "One",
        },
        Object {
          "label": "Option 2",
          "value": "Two",
        },
        Object {
          "label": "Option 3",
          "value": "Three",
        },
      ]
    }
    pageSize={5}
    placeholder="Select..."
    removeSelected={true}
    required={false}
    rtl={false}
    scrollMenuIntoView={true}
    searchable={true}
    simpleValue={false}
    tabSelectsValue={true}
    trimFilter={true}
    valueComponent={[Function]}
    valueKey="value"
  />
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "3ex",
      }
    }
  />
</FormGroup>
`;

exports[`The Select Field renders the help message with a break 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
  validationState={null}
>
  <Label
    label="Radio Test"
    required={false}
  />
  <Select
    arrowRenderer={[Function]}
    autoBlur={true}
    autosize={true}
    backspaceRemoves={true}
    backspaceToRemoveMessage="Press backspace to remove {label}"
    clearAllText="Clear all"
    clearRenderer={[Function]}
    clearValueText="Clear value"
    clearable={true}
    closeOnSelect={true}
    deleteRemoves={true}
    delimiter=","
    disabled={false}
    escapeClearsValue={true}
    filterOptions={[Function]}
    ignoreAccents={true}
    ignoreCase={true}
    inputProps={Object {}}
    isLoading={false}
    joinValues={true}
    labelKey="label"
    matchPos="any"
    matchProp="any"
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    name="fieldName"
    noResultsText="No results found"
    onBlur={[Function]}
    onBlurResetsInput={true}
    onChange={[Function]}
    onCloseResetsInput={true}
    onFocus={[Function]}
    onSelectResetsInput={true}
    openOnClick={true}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "One",
        },
        Object {
          "label": "Option 2",
          "value": "Two",
        },
        Object {
          "label": "Option 3",
          "value": "Three",
        },
      ]
    }
    pageSize={5}
    placeholder="Select..."
    removeSelected={true}
    required={false}
    rtl={false}
    scrollMenuIntoView={true}
    searchable={true}
    simpleValue={false}
    tabSelectsValue={true}
    trimFilter={true}
    valueComponent={[Function]}
    valueKey="value"
  />
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "6ex",
      }
    }
  >
    There was an error
    <br />
    The help Text
  </HelpBlock>
</FormGroup>
`;

exports[`The Select Field renders with async options 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="Radio Test"
    required={false}
  />
  <Async
    autoBlur={true}
    autoload={true}
    cache={Object {}}
    disabled={false}
    ignoreAccents={true}
    ignoreCase={true}
    inputProps={Object {}}
    joinValues={true}
    labelKey="label"
    loadOptions={[Function]}
    loadingPlaceholder="Loading..."
    multi={false}
    name="fieldName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    options={Array []}
    searchPromptText="Type to search"
    valueKey="value"
  />
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "3ex",
      }
    }
  />
</FormGroup>
`;

exports[`The Select Field renders with custom options 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="Radio Test"
    required={false}
  />
  <Select
    arrowRenderer={[Function]}
    autoBlur={true}
    autosize={true}
    backspaceRemoves={true}
    backspaceToRemoveMessage="Press backspace to remove {label}"
    clearAllText="Clear all"
    clearRenderer={[Function]}
    clearValueText="Clear value"
    clearable={true}
    closeOnSelect={true}
    deleteRemoves={true}
    delimiter=","
    disabled={false}
    escapeClearsValue={true}
    filterOptions={[Function]}
    ignoreAccents={true}
    ignoreCase={true}
    inputProps={Object {}}
    isLoading={false}
    joinValues={true}
    labelKey="foo"
    matchPos="any"
    matchProp="any"
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    name="fieldName"
    noResultsText="No results found"
    onBlur={[Function]}
    onBlurResetsInput={true}
    onChange={[Function]}
    onCloseResetsInput={true}
    onFocus={[Function]}
    onSelectResetsInput={true}
    openOnClick={true}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "bar": "One",
          "foo": "Option 1",
        },
        Object {
          "bar": "Two",
          "foo": "Option 2",
        },
        Object {
          "bar": "Three",
          "foo": "Option 3",
        },
      ]
    }
    pageSize={5}
    placeholder="Select..."
    removeSelected={true}
    required={false}
    rtl={false}
    scrollMenuIntoView={true}
    searchable={true}
    simpleValue={false}
    tabSelectsValue={true}
    trimFilter={true}
    valueComponent={[Function]}
    valueKey="bar"
  />
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "3ex",
      }
    }
  />
</FormGroup>
`;
